# doma

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
doc/: BestPractices.md  Conventions.md  Demo.md  Design.md  MyService.md  Organization.md
if/: Circle.xml  MyService.xml  Square.xml  Triangle.xml
if/component/: final.xml  root.xml
res/TEMPLATE/: TEMPLATE_MyComponent.sh  TEMPLATE_MyDeployment_qos.xml  TEMPLATE_MyService.xml  TEMPLATE_MyService_qos.xml
res/qos/builtin/: BuiltinProfiles.xml  connext_micro_resources.xml
res/qos/common/: MyCommon_qos.xml  endpoint.xml  endpoint_qos.xml  factory.xml  factory_qos.xml  flow_qos.xml  participant.xml  participant_qos.xml  snippet_qos.xml
res/qos/common/builtin/: connext_micro.xml
res/qos/components/: Deployment_example.xml  circle_pub_triangle_pub_qos.xml  deployment_qos.xml  square_pub.xml  square_pub_qos.xml  square_pub_sub.xml  square_pub_sub_qos.xml  square_sub_circle_sub_qos.xml  triangle_sub_qos.xml
res/qos/deployments/: Deployment_qos.xml
res/qos/services/: Circle.xml  Circle_qos.xml  MyService_qos.xml  Square.xml  Square_qos.xml  Triangle.xml  Triangle_qos.xml
res/template/: TEMPLATE_MyComponent.sh  TEMPLATE_MyComponent_qos.xml  TEMPLATE_MyDeployment_qos.xml  TEMPLATE_MyService.xml  TEMPLATE_MyServiceIf.xml  TEMPLATE_MyService_qos.xml
res/types/: .gitignore  Chat.idl  MyService.idl  ShapeType.idl  makefile
run/: circle_pub_triangle_pub.sh  square_pub.sh  square_pub_sub.sh  square_sub_circle_sub.sh  triangle_sub.sh
run/Deployment_example/: circle_pub_triangle_pub.sh  square_pub.sh  square_pub_sub.sh  square_sub.sh  square_sub_circle_sub.sh  triangle_sub.sh
src/c++11/shapes/: .gitignore  Component.cxx  Component.hpp  Component_circle_pub_triangle_pub.cxx  Component_square_pub.cxx  Component_square_pub_sub.cxx  Component_square_pubsub.cxx  Component_square_sub.cxx  Component_square_sub_circle_sub.cxx  Component_triangle_sub.cxx  Service.cxx  Service.hpp  Service_publisher.cxx  Service_publisher.hpp  Service_subscriber.cxx  Service_subscriber.hpp  makefile
src/c/MyService/: App.c  App.h  CMakeLists.txt  Databus.c  Databus.h  Filters.c  Filters.h  PubSubApp.c  Publisher.c  Publisher.h  PublisherApp.c  README.md  Readers.c  Readers.h  Subscriber.c  Subscriber.h  SubscriberApp.c  Utils.h  Writers.c  Writers.h
src/lua/: Endpoints.lua
src/lua/MyService/: Publisher.lua  Subscriber.lua
src/lua/shapes/: ShapesPublisher.lua  ShapesSubscriber.lua
